docs/tests/typing/good/testfile-subtype-3.cpp

class A { public: };
class B : public A { public: };
int main() { A *x = new B(); }

