docs/tests/typing/bad/testfile-arrow-2.cpp

int main() { int x; x->a; }
